# tw

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  sample.env
authentication/: models.py  urls.py
authentication/migrations/: 0001_initial.py
docs/authentication/: introduction.md
docs/intro_00/: exercise.md  extra_docker.md  intro_01.md
mini_tw/: asgi.py  settings.py  urls.py  wsgi.py
src/authentication/: models.py  serializers.py  urls.py  views.py
src/authentication/migrations/: 0002_alter_user_options.py  0003_user_following.py
src/mini_tw/: settings.py  urls.py
src/posts/: models.py  serializers.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py
